--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     compatibilitycheck: null,
     backgroundColor: "#222C36",
     splashStyle: "Light",
-    dataUrl: "Release/新しいフォルダー (2).data",
-    codeUrl: "Release/新しいフォルダー (2).js",
-    asmUrl: "Release/新しいフォルダー (2).asm.js",
-    memUrl: "Release/新しいフォルダー (2).mem",
+    dataUrl: "Release/Downloads.data",
+    codeUrl: "Release/Downloads.js",
+    asmUrl: "Release/Downloads.asm.js",
+    memUrl: "Release/Downloads.mem",
   };
 </script>
 <script src="Release/UnityLoader.js"></script>
